[gd_scene load_steps=17 format=3 uid="uid://ca5ysa77v7rxt"]

[ext_resource type="Script" uid="uid://dybs74ygojbd5" path="res://entities/player/player.gd" id="1_g2els"]
[ext_resource type="PackedScene" uid="uid://bbt4ssn8r0q1s" path="res://components/hboxes/hurtbox.tscn" id="2_abrql"]
[ext_resource type="Script" uid="uid://dkrcdpmn67x81" path="res://resources/weapons/weapon.gd" id="2_sglur"]
[ext_resource type="Texture2D" uid="uid://dy0vb6m8u7ffc" path="res://assets/player/monarch-idle.png" id="3_bls4j"]

[sub_resource type="Gradient" id="Gradient_hc03v"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0lwar"]
gradient = SubResource("Gradient_hc03v")
fill_from = Vector2(0.0123457, 1)

[sub_resource type="Resource" id="Resource_bls4j"]
script = ExtResource("2_sglur")
name = "Gun Test"
sprite = SubResource("GradientTexture2D_0lwar")
base_damage = 5.0
base_attack_speed = 1.0
metadata/_custom_type_script = "uid://dkrcdpmn67x81"

[sub_resource type="Gradient" id="Gradient_sglur"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bls4j"]
gradient = SubResource("Gradient_sglur")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sglur"]
size = Vector2(32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkugw"]
atlas = ExtResource("3_bls4j")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fjmc"]
atlas = ExtResource("3_bls4j")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_bls4j"]
atlas = ExtResource("3_bls4j")
region = Rect2(8, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiwj3"]
atlas = ExtResource("3_bls4j")
region = Rect2(0, 8, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_bectd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkugw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fjmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkugw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fjmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkugw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fjmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkugw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fjmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkugw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fjmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bls4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiwj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiwj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiwj3")
}],
"loop": true,
"name": &"idle_front",
"speed": 2.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_g2els")
weapon = SubResource("Resource_bls4j")

[node name="WeaponSprite" type="Sprite2D" parent="."]
position = Vector2(32, 0)
scale = Vector2(0.125, 0.125)
texture = SubResource("GradientTexture2D_bls4j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_g2els")

[node name="Hurtbox" parent="." instance=ExtResource("2_abrql")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_sglur")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_bectd")
animation = &"idle_front"
frame_progress = 0.528932

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
